test/files/neg/t2801.scala
object Test {
  def f[A <: AnyRef] = { val a: A = null ; a }
}
